--- a/otp_auth/views/auth_signup_login_templates.xml
+++ b/otp_auth/views/auth_signup_login_templates.xml
@@ -118,7 +118,7 @@
                 <div class="text-center oe_login_buttons pt-3">
                     <button id="verify_otp" type="submit" class="btn btn-primary btn-block"> Verify </button>
                     <!-- <a id="sendAgain" t-attf-href="/otp/send" class="btn btn-link btn-sm" role="button">Did Not Received OTP?</a> -->
-                    <a id="sendAgain" t-attf-href="/otp/verification" class="btn btn-link btn-sm" role="button">Did Not Received OTP?</a>
+                    <a id="sendAgain" t-attf-href="/otp/verification" class="btn btn-link btn-sm" role="button">Did Not Receive OTP?</a>
                 </div>
             </form>
         </t>
